<resources>
    <string name="app_name">Wroom Wroom Leasing</string>
    <string name="office">Office</string>
    <string name="offer">Offer</string>
    <string name="client">Client</string>
    <string name="stuff">Stuff</string>
    <string name="position">Position</string>
    <string name="office_with_dots">Office:</string>
    <string name="offer_with_dots">Offer:</string>
    <string name="client_with_dots">Client:</string>
    <string name="stuff_with_dots">Stuff:</string>
    <string name="position_with_dots">Position:</string>
    <string name="cw6_mobile_client">CW6 Mobile Client</string>
    <string name="new_offer">New Offer</string>
    <string name="offers_count">Offers count:</string>
    <string name="count_stub">123</string>
    <string name="client_statistic">Client statistic:</string>
    <string name="stuff_statistic">Stuff statistic:</string>
    <string name="a_b_json_stub">{\"a\":\"b\"}</string>
    <string name="client_surnames">Client surnames:</string>
    <string name="server_ip">Server IP (without http:// and :8080)</string>
    <string name="server_ip_cannot_be_empty">Server IP cannot be empty</string>
    <string name="server_ip_default">192.168.0.105</string>
    <string name="ip_cannot_be_empty">IP cannot be empty</string>
    <string name="view_statistic">View statistic</string>
    <string name="dots">…</string>
    <string name="network_error_check_ip">Error while requesting data from server. Check IP.</string>
    <string name="id">ID</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="inn">INN</string>
    <string name="sex">Sex</string>
    <string name="passport_serial">Passport Serial</string>
    <string name="phone">Phone</string>
    <string name="birth_date">Birth Date</string>
    <string name="serial_number">Serial Number</string>
    <string name="law_address">Law Address</string>
    <string name="ending_date">Ending Date</string>
    <string name="sign_date">Sign Date</string>
    <string name="start_date">Start Date</string>
    <string name="value">Value</string>
    <string name="salary">Salary</string>
    <string name="salary_multiplier">Salary multiplier</string>
    <string name="address">Address</string>
    <string name="cabinets_count">Cabinets count</string>

    <string name="id_with_dots">ID:</string>
    <string name="surname_with_dots">Surname:</string>
    <string name="name_with_dots">Name:</string>
    <string name="patronymic_with_dots">Patronymic:</string>
    <string name="inn_with_dots">INN:</string>
    <string name="sex_with_dots">Sex:</string>
    <string name="passport_serial_with_dots">Passport Serial:</string>
    <string name="phone_with_dots">Phone:</string>
    <string name="birth_date_with_dots">Birth Date:</string>
    <string name="serial_number_with_dots">Serial Number:</string>
    <string name="law_address_with_dots">Law Address:</string>
    <string name="ending_date_with_dots">Ending Date:</string>
    <string name="sign_date_with_dots">Sign Date:</string>
    <string name="start_date_with_dots">Start Date:</string>
    <string name="value_with_dots">Value:</string>
    <string name="salary_with_dots">Salary:</string>
    <string name="salary_multiplier_with_dots">Salary multiplier:</string>
    <string name="address_with_dots">Address:</string>
    <string name="cabinets_count_with_dots">Cabinets count:</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="view_data">View data</string>
    <string name="title_activity_new_offer">NewOfferActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_new_offer">Create new offer</string>
    <string name="save">Save</string>

    <string name="error">Error</string>
    <string name="error_with_dots">Error:</string>
    <string name="empty_response">Received empty response from server! Check server logs!</string>
    <string name="host_is_unreachable">Host is unreachable! Check IP or network!</string>
    <string name="connection_refused">Connection refused! Check IP or server!</string>
    <string name="ok">Response OK</string>
    <string name="unknown_network_error">Unknown network error! Check logs!</string>

</resources>